# student-surveillance

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  project_log.md  pyproject.toml  version1.md
data/processed/: analytics_report_20251005_145335.json  attendance.csv  face_embeddings.json
scripts/: install_enhanced.py  run_system.py
src/: analytics.py  api.py  face_system.py
src/app/: __init__.py  dependencies.py  main.py  schemas.py  utils.py
src/app/routes/: __init__.py  analytics.py  enrollment.py  recognition.py  status.py  ui.py
src/core/: config.py
src/models/: __init__.py  detection.py  faiss_matcher.py  quality_filter.py  recognition.py
src/tests/: test_detection.py  test_quality_filter.py  test_recognition.py
